# email-newsletter

./: .env  Cargo.toml  configuration.yaml
.cargo/: config.toml
migrations/: 20240326135336_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
