[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["Pietro Agnoli <pietro.agnoli.work@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.14.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.37", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = "0.11"
